# Psychspiration

./: .gitignore  CMakeLists.txt  Documentation.md  Documentation.txt  Readme.md  UsefullScripts.txt  vcpkg.json
Blender_scripts/: Scene_exporter.py  hello.ps1  to_dds.bat
Psychspiration/: Aabb.cpp  Basic_lighting_colors.cpp  Camera.cpp  FileIO.cpp  Mesh.cpp  Model.cpp  ModelManager.cpp  Object.cpp  Physics.cpp  Psychspiration.vcxproj  Psychspiration.vcxproj.filters  Scene.cpp  Settings.cpp  Settings_importer.cpp  Shader.cpp  Source.cpp  Source2.cpp  Texture.cpp  TextureManager.cpp  Window.h  blender_importer.cpp  blender_importer_basic_lighting.cpp  func.cpp  func_bckup.cpp  imgui.ini  main.cpp  model_loading.cpp  pbr_deffered.cpp  renderer.h  scene_importer - Copy.cpp  scene_importer.cpp  scene_importer_directional_shadow.cpp  scene_importer_shadow.cpp  texture_real.txt
Resources/Settings/: settings.json  settings_.json
Resources/Shaders/: brdf.fs  clusterShader.comp  emptyfrag.fs  equiToCubemap.fs  equiToCubemap.vs  hdr.fs  irradiance.fs  model_simple.fs  model_simple.vs  pbr.fs  pbr.vs  pbr_baked_diffuse.fs  pbr_baked_diffuse.vs  pbr_instanced.fs  pbr_instanced.vs  pbr_new.fs  pbr_new.vs  pbr_template.fs  pointshadow - Copy.fs  pointshadow - Copy.gs  pointshadow.vs  pointshadow_instanced.vs  prefilter.fs  simpleDepthShader_instanced.vs  skybox.fs
documentation/: Documentation.md  Doxyfile  MarkettingDoc.txt  Notes.txt  QNA.txt  Ultimate Plaza.md  UsefullScripts.txt  basicMainStructure.txt  plan.xlsx
external_modified_files/: texture.hpp  texture.inl
include/: CullShape.h  Input.h  RCamera.h
include/include_psych/: ASSIMPimporter.h  Aabb.h  BatchStatic.h  Buff.h  Camera.h  ConsoleDebug.h  Controls.h  CullShape.h  Culling.h  DebugDrawPhysics.h  EventHandler.h  Events.h  FileIO.h  Frustum.h  GLI_load.h  Hdr.h  Hull.h  HullBuilder.h  Light.h  Material.h  Mesh.h  Model.h  ModelManager.h  Object.h  Physics.h  Player.h  RCamera.h  RCameraObject.h  RInput.h  RLight.h  RLightObjects.h  RLightTypes.h  RLights.h  RMaterialBuilder.h  RMesh.h  RMeshBuilder.h  RModel.h  RModelBuilder.h  RModelManager.cpp  RModelManager.h  (+25 more)
include_Psyc/: Aabb.h  Camera.h  EventHandler.h  FileIO.h  Frustum.h  Light.h  Lights.h  Mesh.h  Model.h  ModelManager.h  Object.h  Physics.h  Player.h  Scene.h  Settings.h  Settings_importer.h  Shader.h  State.h  Texture.h  TextureManager.h  TextureObject.h  Window.h  func.h  idkyet.h
scripts/: gli-add-function.bat  list_sources.py
scripts/Blender_scripts/: 2gltf2.py  2gltf2.sh  Scene_exporter.py  bake_button.py  new_script.py  object_vhacd.py  to_dds.bat  to_dds.sh
shaders/: Gpass.fs  Gpass.vs  Lpass_pbr.fs  fragment - Copy.fs  fragment.fs  fragment_directional_shading.fs  fragment_infragment_.fs  fragment_invertex_.fs  hdr.fs  matcap.fs  model_simple.vs  pbr.fs  pointshadow.gs  pointshadow.vs  shadowbckup.fs  testnormal.txt  vertex.vs  vertex_directional_shading.vs  vertex_invertex_.vs
src/src_psych/: Aabb.cpp  Buff.cpp  Camera.cpp  ConsoleDebug.cpp  FileIO.cpp  HullBuilder.cpp  Light.cpp  Mesh.cpp  Model.cpp  ModelManager.cpp  Object.cpp  Physics.cpp  Player.cpp  RCameraObject.cpp  RInput.cpp  RModelManager.cpp  RSettings.cpp  RTextureBuilder.cpp  RTextureManager.cpp  RWindow.cpp  R_Scene.cpp  RawInput.cpp  Renderer.cpp  Rmain.cpp  Scene.cpp  SceneLight.cpp  SettingsManager.cpp  Shader.cpp  Texture.cpp  TextureManager.cpp  glad.c  gui.cpp  main.cpp
